small cosmetics for java code